added paths to allow users to like projects, and add skills.
