# Acorn_Currency_API/src/routes/user.js
@@ -7,8 +7,12 @@ routes.post('/', controllers.addUser);
 routes.put('/:id', controllers.changeUserInfo);
 routes.delete('/:id', controllers.deleteUser);
 
-routes.get('/:id/userSkill', controllers.getAllUserSkills);
+routes.get('/:id/userSkill', controllers.getAllUserSkillsByUserId);
 routes.post('/userSkill', controllers.addUserSkill);
-routes.delete('/userSkill');
+routes.delete('/userSkill/:id', controllers.deleteUserSkill);
+
+routes.get('/:id/projectLike', controllers.getAllProjectLikesByUserId);
+routes.post('/projectLike', controllers.addProjectLike);
+routes.delete('/projectLike/:id', controllers.deleteProjectLike);
 
 module.exports = routes;
